tests/NormalTests/paczka1/fuzzy1/66848803.err
Error in line 3: 8KC S56 9,7
Error in line 13: XyrNkHUj5Ja S56 45,1
Error in line 17: eKu53n0J S467 30,2
Error in line 19: XyrNkHUj5Ja S467 44,5
